Add google analytics code

--- a/chatbot/src/views/chat.ejs
+++ b/chatbot/src/views/chat.ejs
@@ -8,6 +8,16 @@
      <!-- Include Highlight.js and Marked.js -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script> 
+
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-11H6KPC8FZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-11H6KPC8FZ');
+    </script>
+
 </head>
 <body>
     <div id="clearModalOverlay" class="modal-overlay" style="display: none;">
